# uspto-rs

./: CLASSIFICATION.md  Cargo.toml  FETCH.md
src/: data.rs  deserialize.rs  error.rs  fetch.rs  lib.rs  serialize.rs  util.rs
