[package]
name = "uspto"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
snafu = "0.4.3"
quick-xml = "0.15.0"
reqwest = "0.9.20"
regex = "1.3.1"
lazy_static = "1.4.0"
chrono = "0.4.9"
structopt = "0.3.2"
csv = "1.1.1"
